generated/nixidy/prod/firefly/Deployment-firefly-importer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/controller: firefly-importer
    app.kubernetes.io/instance: firefly-importer
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: firefly-importer
  name: firefly-importer
  namespace: dotfiles
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/controller: firefly-importer
      app.kubernetes.io/instance: firefly-importer
      app.kubernetes.io/name: firefly-importer
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        checksum/configMaps: 180017d5236a81e4d7260dc360e58a1bf5c4046a687bd0c628aba2f9f0aefeb4
      labels:
        app.kubernetes.io/controller: firefly-importer
        app.kubernetes.io/instance: firefly-importer
        app.kubernetes.io/name: firefly-importer
    spec:
      automountServiceAccountToken: true
      containers:
        - image: fireflyiii/data-importer:version-1.7.7-cli
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          name: firefly-importer
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          startupProbe:
            failureThreshold: 3
            initialDelaySeconds: 0
            periodSeconds: 10
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          volumeMounts:
            - mountPath: /.env
              name: config
              readOnly: true
            - mountPath: /secrets
              name: secrets
      dnsPolicy: ClusterFirst
      enableServiceLinks: false
      hostIPC: false
      hostNetwork: false
      hostPID: false
      serviceAccountName: default
      volumes:
        - configMap:
            name: firefly-importer
          name: config
        - name: secrets
          secret:
            secretName: firefly-importer
