generated/nixidy/prod/firefly/Service-firefly.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: firefly
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: firefly
    app.kubernetes.io/service: firefly
  name: firefly
  namespace: dotfiles
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app.kubernetes.io/controller: firefly
    app.kubernetes.io/instance: firefly
    app.kubernetes.io/name: firefly
  type: ClusterIP
